<resources>
    <string name="app_name">TexScanner</string>
    <string name="title_activity_mapping">MappingActivity</string>
    <string name="title_diffuse">Difusão</string>
    <string name="title_roughness">Dureza</string>
    <string name="title_glossiness">Metalicidade</string>
    <string name="title_height">Altitude</string>
    <string name="title_normal">Normal</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
