<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.MappingActivity" android:clickable="false" android:id="@+id/main_layout">

    <android.support.design.widget.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="8dp"
            app:tabBackground="@color/backgroundLight"
            android:id="@+id/tabLayout" app:tabMode="scrollable"
            app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_diffuse" android:id="@+id/diffuse_tab"/>

        <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_height" android:id="@+id/height_tab"/>

        <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_roughness" android:id="@+id/rough_tab"/>

        <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_glossiness" android:id="@+id/gloss_tab"/>

        <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_normal" android:id="@+id/normal_tab"/>
    </android.support.design.widget.TabLayout>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp" tools:layout_editor_absoluteX="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabLayout" android:id="@+id/holder" android:fillViewport="true">
        <fragment
                android:id="@+id/fragment"
                tools:layout_editor_absoluteY="48dp" android:layout_height="wrap_content"
                android:layout_width="match_parent"
                tools:layout="@layout/fragment_diffuse"
                android:name="com.yago.texscanner.view.fragment.DiffuseFragment"/>
    </ScrollView>
    <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:id="@+id/save"
            app:srcCompat="@android:drawable/ic_menu_set_as"
            app:fabSize="normal"
            android:scaleType="fitCenter"
            app:maxImageSize="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="25dp"
            android:visibility="visible"
            android:focusable="true" android:layout_marginRight="25dp"/>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" tools:layout_editor_absoluteY="265dp"
            tools:layout_editor_absoluteX="8dp" android:background="#88000000" android:visibility="invisible"
            android:id="@+id/saving_overlay">
        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/saving_progress" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
                android:max="4" android:progress="0" android:indeterminate="false"/>
        <TextView
                android:text="Saving..."
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/saving_text" android:textStyle="bold"
                android:textSize="24sp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="10dp" app:layout_constraintBottom_toTopOf="@+id/saving_progress"
                android:textColor="@color/colorPrimary" android:shadowDx="1" android:shadowDy="1"
                android:shadowRadius="1" android:shadowColor="@android:color/black"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>